@@ -26,6 +26,7 @@ version <next>:
 - DTS lossless extension (XLL) decoding (not lossless, disabled by default)
 - Intel QSV-accelerated H.264 encoding
 - MMAL-accelerated H.264 decoding
+- DTS decoding through libdcadec
 
 
 version 11:
